# IMDL_src

./: README.md
comms/: CMakeLists.txt  package.xml
comms/scripts/: hardware_interface.py
hardware_interface/: CMakeLists.txt  package.xml
hardware_interface/scripts/: primative_driver.py
kinect/: CMakeLists.txt  package.xml  package.xml.old
kinect/src/: colored_obj_extractor.cpp  kinect_driver.cpp  plane_extractor.cpp
kipc_launch/: CMakeLists.txt  package.xml
kipc_launch/launch/: all.launch  hardware_interface.launch  percepts.launch  schema.launch
kipc_launch/scripts/: mission_demo_day.py
motor_controler/: CMakeLists.txt  package.xml
motor_controler/scripts/: primative_driver.py
percept_generators/: CMakeLists.txt  package.xml
percept_generators/msg/: object.msg  objectArray.msg  pfield.msg
percept_generators/scripts/: encoder_fwd_kinematics.py  encoder_to_vels.py  find_start_gate.py  refine_objects.py  sonar_to_pfield.py
percept_generators/src/: colored_obj_extractor.cpp
schema/: CMakeLists.txt  package.xml
schema/msg/: pfield.msg  schema_state.msg
schema/scripts/: avoid.py  forward.py  go_to_closses_sphere.py  go_to_start_gate.py  pfield_sum.py  schema_base.py  spin.py  wander.py
scripts/: startup.sh
